@@ -352,6 +352,8 @@ class ApiUpload extends ApiBase {
 		}
 
 		if ( $this->mParams['chunk'] ) {
+			$this->checkChunkedEnabled();
+
 			// Chunk upload
 			$this->mUpload = new UploadFromChunks();
 			if( isset( $this->mParams['filekey'] ) ) {
@@ -645,6 +647,13 @@ class ApiUpload extends ApiBase {
 		}
 	}
 
+	protected function checkChunkedEnabled() {
+		global $wgAllowChunkedUploads;
+		if ( !$wgAllowChunkedUploads ) {
+			$this->dieUsage( 'Chunked uploads disabled', 'chunkeduploaddisabled' );
+		}
+	}
+
 	public function mustBePosted() {
 		return true;
 	}
@@ -801,6 +810,7 @@ class ApiUpload extends ApiBase {
 				array( 'code' => 'publishfailed', 'info' => 'Publishing of stashed file failed' ),
 				array( 'code' => 'internal-error', 'info' => 'An internal error occurred' ),
 				array( 'code' => 'asynccopyuploaddisabled', 'info' => 'Asynchronous copy uploads disabled' ),
+				array( 'code' => 'chunkeduploaddisabled', 'info' => 'Chunked uploads disabled' ),
 				array( 'fileexists-forbidden' ),
 				array( 'fileexists-shared-forbidden' ),
 			)
